# ecommerce-api

./: .env.example  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
alembic/versions/: efbdda4a7368_initial_migration.py
api/: __init__.py  category.py  users.py
backend/: config.py  docker-compose.yml  pyproject.toml
backend/api/: __init__.py  cart.py  cart_item.py  category.py  product.py  users.py
backend/crud/: base.py  cart.py  cart_item.py  category.py  payment.py  product.py  users.py
backend/dependencies/: get_user.py  models.py
backend/migrations/versions/: 28016a291046_initial_migration.py  6892e05586ad_initial_migration.py  6e486a09c76f_initial_migrations.py  80f96899227e_added_the_status_column_to_the_payment.py  a7aae5dff080_initial_migrations.py  b192d744b068_initial_migration.py
backend/models/: __init__.py  cart.py  payment.py  product.py
backend/models/mixins/: __init__.py  timestamp.py
backend/schemas/: cart.py  cart_item.py  category.py  payment.py  products.py  users.py
backend/utils/: cart_status.py  categories.json  jwt_handler.py  products.json  seeders.py  users.json
crud/: __init__.py  base.py  category.py  users.py
dependencies/: get_user.py  models.py
frontend/: bun.lockb  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/src/: middleware.ts
middlewares/: authentication.py
migrations/: env.py
migrations/versions/: 1ddc2c7bf5bc_initial_migration.py  (+4 more)
models/: __init__.py  category.py  user.py  users.py
schemas/: category.py  current_user.py  users.py
(+82 files in other folders)
